# PathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  scene-converter.py
cmake-modules/: FindFilesystem.cmake
dependencies/: CMakeLists.txt
dependencies/nlohmann-json/: README.md
examples/: cactus.json  cube.json  hello.json  railway.json  teapot.json  unit.json  valid_scene.json
examples/cornell-box/: scene-glass.json  scene-metal.json  scene-mirror-rotate.json  scene-mirror.json  scene-tungsten.json  scene.json
examples/cornell-box/materials/: 0-left-wall.json  1-right-wall.json  10-tall-box-metal.json  2-floor.json  6-tall-box.json  7-light.json  8-tall-box-mirror.json  9-tall-box-glass.json
examples/dragon/: scene-tungsten.json  scene.json
examples/materials/: blue.json  ceramic.json  default.json  red.json
examples/materials/railway/: cactus.json  ground.json  metal.json  pier.json  props.json
examples/stage-0/: 0-basic.json  1-sanity.json  2-multiple-objects.json  3-camera-origin.json  4-ambiants.json  5-multiple-mesh.json  6-sanity.json  7-camera-direction.json
examples/stage-1/: 0-sanity.json  1-sanity.json  10-lighthouse.json  11-pointlight2.json  2-rotation.json  3-fov30.json  4-fov45.json  5-fov70.json  6-fov90.json  7-fov120.json  8-directional.json  9-pointlight.json
examples/stage-2/: 1-ceramic.json  2-directional.json  3-ceramic-point.json
examples/veach-bidir/: LICENSE.txt  scene-tungsten.json  scene.json
examples/veach-bidir/materials/: 0-diffuse.json  3-wood.json  4-lamp.json
include/raytracer/: constants.hh  intersect.hh  screen.hh  trace.hh
include/raytracer/kd-tree/: aabb.hh  construction.hh  kd-tree.hh  traversal.hh
include/raytracer/types/: bsdf.hh  camera.hh  image.hh  mesh.hh  object.hh  pixel.hh  scene.hh  triangle.hh  vector.hh
src/: intersect.cc  main.cc  screen.cc  trace.cc
src/kd-tree/: aabb.cc  construction.cc  kd-tree.cc  traversal.cc
src/types/: bsdf.cc  image.cc  triangle.cc
src/utils/: faces-range.cc  json-utils.cc  math-utils.cc  mesh-loader.cc  save-png.cc  scene-loader.cc
tests/: test-save-png.cc
tools/: json_to_mtl.py
(+16 files in other folders)
